update tests so that all compiles, not everything working yet