@@ -5,12 +5,14 @@ import lombok.extern.log4j.Log4j2;
 import org.junit.jupiter.api.Test;
 import org.matsim.api.core.v01.Id;
 import org.matsim.api.core.v01.Message;
+import org.matsim.api.core.v01.messages.Empty;
+import org.matsim.api.core.v01.network.Network;
+import org.matsim.core.mobsim.framework.DistributedMobsimAgent;
+import org.matsim.core.mobsim.qsim.interfaces.DistributedMobsimVehicle;
 import org.matsim.dsim.MessageBroker;
+import org.matsim.dsim.QSimCompatibility;
 import org.matsim.dsim.TestUtils;
-import org.matsim.dsim.messages.PersonMsg;
 import org.matsim.dsim.messages.SimStepMessage;
-import org.matsim.dsim.messages.VehicleMsg;
-import org.matsim.dsim.simulation.net.SimVehicle;
 import org.mockito.ArgumentCaptor;
 
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -25,13 +27,14 @@ class SimStepMessagingTest {
     @Test
     public void init() {
 
-        var network = TestUtils.createDistributedThreeLinkNetwork();
-        var messageBroker = mock(MessageBroker.class);
-        var neighbors = new IntOpenHashSet(new int[]{0, 2});
-        var part = 1;
+		Network network = TestUtils.createDistributedThreeLinkNetwork();
+		MessageBroker messageBroker = mock(MessageBroker.class);
+		QSimCompatibility qsim = mock(QSimCompatibility.class);
+		IntOpenHashSet neighbors = new IntOpenHashSet(new int[]{0, 2});
+		int part = 1;
 
         var messaging = new SimStepMessaging.SimStepMessagingImpl(
-                network, messageBroker, neighbors, part);
+                network, messageBroker, qsim, neighbors, part);
 
         assertEquals(neighbors, messaging.getNeighbors());
         assertEquals(part, messaging.getPart());
@@ -45,11 +48,12 @@ class SimStepMessagingTest {
 
         var network = TestUtils.createDistributedThreeLinkNetwork();
         var messageBroker = mock(MessageBroker.class);
+		var qsim = mock(QSimCompatibility.class);
         var neighbors = new IntOpenHashSet(new int[]{1});
         var part = 0;
 
         var messaging = new SimStepMessaging.SimStepMessagingImpl(
-                network, messageBroker, neighbors, part);
+                network, messageBroker, qsim, neighbors, part);
         messaging.sendMessages(0);
         ArgumentCaptor<Message> messageCaptor = ArgumentCaptor.forClass(Message.class);
         ArgumentCaptor<Integer> targetPartCaptor = ArgumentCaptor.forClass(Integer.class);
@@ -68,20 +72,23 @@ class SimStepMessagingTest {
     public void collectTeleportation() {
         var network = TestUtils.createDistributedThreeLinkNetwork();
         var messageBroker = mock(MessageBroker.class);
-        var neighbors = new IntOpenHashSet(new int[]{1});
+		var qsim = mock(QSimCompatibility.class);
+		var neighbors = new IntOpenHashSet(new int[]{1});
         var part = 0;
 
-        var messaging = SimStepMessaging.create(network, messageBroker, neighbors, part);
+        var messaging = SimStepMessaging.create(network, messageBroker, qsim, neighbors, part);
 
-        var remotePerson = mock(SimPerson.class);
-        when(remotePerson.getRouteElement(any())).thenReturn(Id.createLinkId("l3"));
-        when(remotePerson.toMessage()).thenReturn(PersonMsg.builder().build());
-        var neighborPerson = mock(SimPerson.class);
-        when(neighborPerson.getRouteElement(any())).thenReturn(Id.createLinkId("l2"));
-        when(neighborPerson.toMessage()).thenReturn(PersonMsg.builder().build());
-        var localPerson = mock(SimPerson.class);
-        when(localPerson.getRouteElement(any())).thenReturn(Id.createLinkId("l1"));
-        when(localPerson.toMessage()).thenReturn(PersonMsg.builder().build());
+        var remotePerson = mock(DistributedMobsimAgent.class);
+        when(remotePerson.getCurrentLinkId()).thenReturn(Id.createLinkId("l3"));
+        when(remotePerson.toMessage()).thenReturn(Empty.INSTANCE);
+
+        var neighborPerson = mock(DistributedMobsimAgent.class);
+        when(neighborPerson.getCurrentLinkId()).thenReturn(Id.createLinkId("l2"));
+        when(neighborPerson.toMessage()).thenReturn(Empty.INSTANCE);
+
+		var localPerson = mock(DistributedMobsimAgent.class);
+        when(localPerson.getCurrentLinkId()).thenReturn(Id.createLinkId("l1"));
+        when(localPerson.toMessage()).thenReturn(Empty.INSTANCE);
 
         messaging.collectTeleportation(remotePerson, 10);
         messaging.collectTeleportation(neighborPerson, 10);
@@ -90,26 +97,24 @@ class SimStepMessagingTest {
 
         verify(messageBroker, times(3)).send(assertArg(message -> {
             assertInstanceOf(SimStepMessage.class, message);
-            var simStepMessage = (SimStepMessage) message;
+			SimStepMessage simStepMessage = (SimStepMessage) message;
             assertEquals(1, simStepMessage.getTeleportationMsgsCount());
         }), anyInt());
-        verify(remotePerson).getRouteElement(assertArg(type -> assertEquals(type, SimPerson.RouteAccess.Last)));
-        verify(neighborPerson).getRouteElement(assertArg(type -> assertEquals(type, SimPerson.RouteAccess.Last)));
-        verify(localPerson).getRouteElement(assertArg(type -> assertEquals(type, SimPerson.RouteAccess.Last)));
     }
 
     @Test
     public void collectVehicle() {
         var network = TestUtils.createDistributedThreeLinkNetwork();
         var messageBroker = mock(MessageBroker.class);
-        var neighbors = new IntOpenHashSet(new int[]{1});
+		var qsim = mock(QSimCompatibility.class);
+		var neighbors = new IntOpenHashSet(new int[]{1});
         var part = 0;
 
-        var messaging = SimStepMessaging.create(network, messageBroker, neighbors, part);
-        var vehicle = mock(SimVehicle.class);
-        var vehicleWireType = VehicleMsg.builder().build();
-        when(vehicle.getCurrentRouteElement()).thenReturn(Id.createLinkId("l2"));
-        when(vehicle.toMessage()).thenReturn(vehicleWireType);
+        var messaging = SimStepMessaging.create(network, messageBroker, qsim, neighbors, part);
+        var vehicle = mock(DistributedMobsimVehicle.class);
+
+        when(vehicle.getCurrentLinkId()).thenReturn(Id.createLinkId("l2"));
+        when(vehicle.toMessage()).thenReturn(Empty.INSTANCE);
 
         messaging.collectVehicle(vehicle);
         verify(messageBroker, times(0)).send(any(), anyInt());
@@ -118,7 +123,9 @@ class SimStepMessagingTest {
         verify(messageBroker, times(1)).send(assertArg(message -> {
             var simStepMessage = (SimStepMessage) message;
             assertEquals(1, simStepMessage.getVehicleMsgsCount());
-            assertEquals(vehicleWireType, simStepMessage.getVehicleMsgs().get(0));
+			// TODO: will break
+            assertEquals(Empty.INSTANCE, simStepMessage.getVehicles().getFirst());
+
         }), anyInt());
     }
 
@@ -127,10 +134,11 @@ class SimStepMessagingTest {
 
         var network = TestUtils.createDistributedThreeLinkNetwork();
         var messageBroker = mock(MessageBroker.class);
-        var neighbors = new IntOpenHashSet(new int[]{0, 2});
+		var qsim = mock(QSimCompatibility.class);
+		var neighbors = new IntOpenHashSet(new int[]{0, 2});
         var part = 1;
 
-        var messaging = SimStepMessaging.create(network, messageBroker, neighbors, part);
+        var messaging = SimStepMessaging.create(network, messageBroker, qsim, neighbors, part);
 
         messaging.collectStorageCapacityUpdate(Id.createLinkId("l1"), 10, 5, 0);
         verify(messageBroker, times(0)).send(any(), anyInt());
@@ -156,10 +164,11 @@ class SimStepMessagingTest {
 
         var network = TestUtils.createDistributedThreeLinkNetwork();
         var messageBroker = mock(MessageBroker.class);
-        var neighbors = new IntOpenHashSet(new int[]{1});
+		var qsim = mock(QSimCompatibility.class);
+		var neighbors = new IntOpenHashSet(new int[]{1});
         var part = 2;
 
-        var messaging = SimStepMessaging.create(network, messageBroker, neighbors, part);
+        var messaging = SimStepMessaging.create(network, messageBroker, qsim, neighbors, part);
         messaging.collectStorageCapacityUpdate(Id.createLinkId("l2"), 10, 5, 1);
         verify(messageBroker, times(0)).send(any(), anyInt());
 
